--- a/src/component/Booking/Booking.css
+++ b/src/component/Booking/Booking.css
@@ -2,7 +2,7 @@
     background-image: url("./../../../public/hair-cut.png");
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
+    height: 553px;
 }
 
 .row-booking {
@@ -14,12 +14,13 @@
     justify-content: center;
     align-items: center;
     width: 50vw;
-    height: 100vh;
+    margin-top: 40px;
+    /* height: 100vh; */
 }
 
 .form-booking {
     width: 420px;
-    height: 550px;
+    /* height: 550px; */
     /* box-shadow: rgb(0 0 0 / 16%) 1px 1px 10px;
     padding-top: 30px;
     padding-bottom: 20px;
@@ -31,11 +32,6 @@
     padding-left: 12%;
     padding-right: 12%;
 } */
-
-h3 {
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
-}
 
 .btn-submit {
     background-color: #B99A5F;
@@ -64,7 +60,7 @@ h3 {
 }
 
 .booking-payment h3 {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 30px;
@@ -73,6 +69,11 @@ h3 {
     margin-top: 30px;
 }
 
-.btn-submit{
+.btn-submit {
     margin-top: 20px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
 }
