--- a/src/component/Booking/Booking.css
+++ b/src/component/Booking/Booking.css
@@ -76,9 +76,14 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 150%;
+    color: white;
 }
 
 .error-txt{
     color: red;
     font-size: 14px;
+}
+
+span{
+    color: black;
 }
