initial commit with logo changes

--- a/src/component/Home/Home.css
+++ b/src/component/Home/Home.css
@@ -5,6 +5,10 @@
     --secondary: hsla(0, 0%, 3%, 0.847);
 }
 
+Container{
+    scroll-behavior: smooth;
+}
+
 .home-container {
     height: 625px;
     background: linear-gradient(135deg, var(--primary), var(--secondary)),
